--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,45 @@
 Package: CLARITY
 Title: CLARITY-project
 Version: 0.0.0.9000
-Authors@R: person('Nina', 'Melzer', email = 'melzer@fbn-dummerstorf.de', role = c('cre', 'aut'), comment = c(ORCID = '0000-0002-9586-1588'))
+Authors@R: as.person(c(
+    "Nina Melzer <melzer@fbn-dummerstorf.de> [aut, cre]",
+    "Saber Qanbari <qanbari@fbn-dummerstorf.de> [ctb]",
+    "Doerte Wittenburg <wittenburg@fbn-dummerstorf.de> [ctb]"
+  ))
 Description: Clarity_description.
 License: CC BY 4.0
 Imports: 
+    attempt,
+    cachem,
     config (>= 0.3.1),
+    dplyr,
+    DT,
+    ggplot2,
+    glue,
     golem (>= 0.3.2),
-    shiny (>= 1.7.1)
+    grid,
+    gridExtra,
+    htmltools,
+    magrittr,
+    periscope,
+    plotly,
+    png,
+    roxygen2,
+    shiny (>= 1.7.1),
+    shinycssloaders,
+    shinydashboard,
+    shinyjs,
+    spelling,
+    thinkr
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 URL: https://github.com/nmelzer/CLARITY
 BugReports: https://github.com/nmelzer/CLARITY/issues
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Language: en-US
+VignetteBuilder: knitr
