--- a/inst/golem-config.yml
+++ b/inst/golem-config.yml
@@ -1,8 +1,8 @@
 default:
   golem_name: CLARITY
-  golem_version: 0.0.0.9000
+  golem_version: 0.0.1
   app_prod: no
 production:
   app_prod: yes
 dev:
-  golem_wd: !expr here::here()
+  golem_wd: D:/Melzer/Desktop/CLARITY
