--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,27 @@
 
 export(app_server)
 export(app_ui)
+export(creating_venn)
+export(get_only_legend)
+export(hovering)
+export(makePlot_all_geneticMaps)
+export(makePlot_all_geneticMaps_bc)
+export(makePlot_geneticMaps)
+export(makePlot_geneticMaps_bc)
+export(makePlot_genetic_function)
+export(makePlot_genetic_function_bc)
 export(mod_about_the_project_server)
 export(mod_about_the_project_ui)
+export(mod_bc_general_server)
+export(mod_bc_general_ui)
+export(mod_bc_genetic_function_server)
+export(mod_bc_genetic_function_ui)
+export(mod_bc_genetic_map_server)
+export(mod_bc_genetic_map_ui)
+export(mod_bc_hotspot_server)
+export(mod_bc_hotspot_ui)
+export(mod_contact_server)
+export(mod_contact_ui)
 export(mod_datasets_server)
 export(mod_datasets_ui)
 export(mod_general_server)
@@ -18,26 +37,47 @@ export(mod_methodology_server)
 export(mod_methodology_ui)
 export(mod_misplaced_server)
 export(mod_misplaced_ui)
+export(prepare_table_venn)
+export(process_venn_data)
 export(run_app)
-export(transformdata)
+export(scatterPlot_general_all)
+export(scatterPlot_general_all_bc)
+export(scatterPlot_general_selected)
+export(scatterPlot_general_selected_bc)
+export(scatterPlot_hotspot)
+export(scatterPlot_hotspot_all)
+export(transformdata_general)
+export(transformdata_general_bc)
+export(transformdata_genetic_map)
+export(transformdata_genetic_map_bc)
+export(transformdata_hotspot)
+import(dplyr, except = combine)
 import(ggplot2)
 import(gridExtra)
 import(htmltools)
 import(plotly, except = last_plot)
-import(roxygen2)
+import(plotly, except = last_plot)
+
 import(shiny)
-import(shinycssloaders)
 import(shinydashboard)
 import(shinyjs, except = runExample)
 import(shinyjs, except = runExample)
 
+importFrom(RVenn,Venn)
+importFrom(ggVennDiagram,process_data)
+importFrom(ggVennDiagram,process_region_data)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
-importFrom(shiny,NS)
+importFrom(purrr,map_dbl)
+importFrom(rlang,is_empty)
+importFrom(sf,st_drop_geometry)
+importFrom(sf,st_point_on_surface)
+importFrom(shiny,bindCache)
 importFrom(shiny,shinyApp)
-importFrom(shiny,tagList)
+importFrom(shinycssloaders,withSpinner)
+importFrom(shinydashboard,box)
 importFrom(stats,cor)
 importFrom(stats,sd)
