--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,6 +21,7 @@ jobs:
         with:
           use-public-rspm: true
 
+      - uses: docker://pandoc/core:2.9
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: rcmdcheck
