--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,7 +21,10 @@ jobs:
         with:
           use-public-rspm: true
 
-      - uses: docker://pandoc/core:2.9
+      - uses: r-lib/actions/setup-pandoc@master
+        with:
+          pandoc-version: '2.9.2.1'
+          
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: rcmdcheck
