--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     shinydashboard,
     shinyjs,
     RVenn,
-    purrr
+    purrr,
+       pandoc
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
@@ -37,7 +38,6 @@ BugReports: https://github.com/nmelzer/CLARITY/issues
 Suggests: 
     knitr,
     rmarkdown,
-    pandoc,
     testthat (>= 3.0.0),
     roxygen2,
     spelling
