--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,8 +28,7 @@ Imports:
     shinydashboard,
     shinyjs,
     RVenn,
-    purrr,
-       pandoc
+    purrr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
