--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,12 +65,12 @@ import(shinydashboard)
 import(shinyjs, except = runExample)
 import(shinyjs, except = runExample)
 
-importFrom(RVenn,Venn)
 importFrom(cachem,cache_disk)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,row_number)
 importFrom(dplyr,tibble)
+importFrom(ggVennDiagram,Venn)
 importFrom(ggVennDiagram,process_data)
 importFrom(ggVennDiagram,process_region_data)
 importFrom(ggVennDiagram,venn_regionedge)
