--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,8 +52,9 @@ export(transformdata_genetic_map_bc)
 export(transformdata_hotspot)
 export(transformdata_hotspot_bc)
 import(dplyr, except = combine)
+import(dplyr, except = combine)
+
 import(ggplot2)
-import(gridExtra)
 import(htmltools)
 import(magrittr)
 import(metathis)
@@ -63,13 +64,10 @@ import(plotly, except = last_plot)
 import(shiny)
 import(shinydashboard)
 import(shinyjs, except = runExample)
-import(shinyjs, except = runExample)
-
 importFrom(cachem,cache_disk)
-importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
-importFrom(dplyr,row_number)
-importFrom(dplyr,tibble)
+importFrom(dplyr,select)
+importFrom(dplyr,semi_join)
 importFrom(ggVennDiagram,Venn)
 importFrom(ggVennDiagram,process_data)
 importFrom(ggVennDiagram,process_region_data)
@@ -83,8 +81,10 @@ importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(grDevices,colorRampPalette)
 importFrom(gridExtra,tableGrob)
+importFrom(htmlwidgets,onRender)
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
+importFrom(plotly,ggplotly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(plotly,toWebGL)
